<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/record_field_hint"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="24:15"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_field_hint"
        app:layout_constraintTop_toBottomOf="@id/text_input_record"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="5th January 2023"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/save_button_text"
        app:layout_constraintTop_toBottomOf="@id/text_input_date"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/clear_record_button_text"
        app:layout_constraintTop_toBottomOf="@id/button_save"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>