<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_heading"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bike_heading"
                android:scaleType="centerCrop"
                android:contentDescription="@string/cycling_image_description"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_overlay"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cycling_view_title"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginBottom="16dp"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/frame_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Longest Ride -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_longest_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/text_view_longest_ride_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longest_ride_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/RecordNameTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_longest_ride_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="132 KM"
                    style="@style/RecordValueTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_longest_ride_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_longest_ride_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="29/11/2020"
                    android:layout_marginTop="16dp"
                    style="@style/RecordDateTextAppearance"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- Longest Ride ends -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"
                android:layout_marginTop="16dp"/>
            <!-- Biggest Climb -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_biggest_climb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/text_view_biggest_climb_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biggest_climb_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/RecordNameTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_biggest_climb_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="100m"
                    style="@style/RecordValueTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_biggest_climb_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_biggest_climb_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="29/11/2020"
                    android:layout_marginTop="16dp"
                    style="@style/RecordDateTextAppearance"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- Biggest Climb ends -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"
                android:layout_marginTop="16dp"/>
            <!-- Average Speed -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_average_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/text_view_average_speed_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_speed_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/RecordNameTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_average_speed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22 km/hr"
                    style="@style/RecordValueTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_average_speed_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_average_speed_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="29/11/2020"
                    android:layout_marginTop="16dp"
                    style="@style/RecordDateTextAppearance"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- Average Speed ends -->

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>