<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_heading"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/running_heading"
                android:scaleType="centerCrop"
                android:contentDescription="@string/running_image_description"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_overlay"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/running_view_title"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginBottom="16dp"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/frame_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- 5KM -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_5km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/text_view_5km_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five_km_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/RecordNameTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_5km_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22:04"
                    style="@style/RecordValueTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_5km_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_5km_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="29/11/2020"
                    android:layout_marginTop="16dp"
                    style="@style/RecordDateTextAppearance"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- 5KM ends -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"
                android:layout_marginTop="16dp"/>
            <!-- 10KM -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_10km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/text_view_10km_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_km_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/RecordNameTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_10km_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22:04"
                    style="@style/RecordValueTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_10km_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_10km_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="29/11/2020"
                    android:layout_marginTop="16dp"
                    style="@style/RecordDateTextAppearance"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- 10KM ends -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"
                android:layout_marginTop="16dp"/>
            <!-- Half Marathon -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_half_marathon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/text_view_half_marathon_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/half_marathon_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/RecordNameTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_half_marathon_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22:04"
                    style="@style/RecordValueTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_half_marathon_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_half_marathon_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="29/11/2020"
                    android:layout_marginTop="16dp"
                    style="@style/RecordDateTextAppearance"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- Half Marathon ends -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"
                android:layout_marginTop="16dp"/>
            <!-- Full Marathon -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_full_marathon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/text_view_full_marathon_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_marathon_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/RecordNameTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_full_marathon_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22:04"
                    style="@style/RecordValueTextAppearance"/>

                <TextView
                    android:id="@+id/text_view_full_marathon_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_full_marathon_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="29/11/2020"
                    android:layout_marginTop="16dp"
                    style="@style/RecordDateTextAppearance"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!-- Full Marathon ends -->
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>